--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,4 +27,4 @@ jobs:
         pip install -r Finale/requirements.txt
     - name: Run Tests
       run: |
-        python manage.py test
+        python Finale/manage.py test
